gl31-master/src/test/deca/syntax/invalid/complet/bad_protected.deca
// Description:
//    tests de programme incorrect syntaxiquement pour complet
//
// Resultats:
//    Ligne 10 : Erreur, 'protecte' manquant
//
// Historique:
//    cree le 18/01/2021
class Test{
    protecte int a;
}

